--- a/jenkins/jenkins-casc.yaml
+++ b/jenkins/jenkins-casc.yaml
@@ -1,4 +1,10 @@
 jenkins:
+  globalNodeProperties:
+    - envVars:
+        env:
+          - key: IMAGE_NAME
+            value: "${IMAGE_NAME}"
+
   systemMessage: "Jenkins configured automatically by Jenkins Configuration as Code plugin"
 
   # Security Realm for user authentication
