--- a/kustomize/base/service.yaml
+++ b/kustomize/base/service.yaml
@@ -1,11 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-app-service
+  creationTimestamp: null
+  labels:
+    app: backend
+  name: backend
 spec:
-  selector:
-    app: my-app
   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
+  - port: 8080
+    protocol: TCP
+    targetPort: 80
+  selector:
+    app: backend
+status:
+  loadBalancer: {}
