--- a/kustomize/base/deployment.yaml
+++ b/kustomize/base/deployment.yaml
@@ -17,6 +17,7 @@ spec:
         prometheus.io/scrape: "true"
         prometheus.io/port: "80"
         prometheus.io/path: "/metrics"
+        prometheus.io/scheme: "http"
       creationTimestamp: null
       labels:
         app: backend
